Fix: portrait z-index fix

--- a/src/components/Chat/IndividualPortrait/IndividualPortrait.css
+++ b/src/components/Chat/IndividualPortrait/IndividualPortrait.css
@@ -2,7 +2,7 @@
 .individual-portrait-inner {
   overflow: hidden;
   position: relative;
-  z-index: 100;
+  z-index: 10;
 }
 
 .individual-portrait-img-container {
